# fyfth

./: Cargo.toml  readme.md
assets/fyfth/: prelude.fy
assets/shaders/: focus.wgsl
crates/fyfth_core/: Cargo.toml
crates/fyfth_core/src/: bevy_component.rs  interpreter.rs  language.rs  lexer.rs  lib.rs  util.rs
crates/fyfth_focus/: Cargo.toml
crates/fyfth_focus/src/: language_extension.rs  lib.rs
crates/fyfth_terminal/: Cargo.toml
crates/fyfth_terminal/src/: lib.rs
examples/: basic_example.rs
src/: lib.rs
