[package]
name = "fyfth"
version = "0.1.0"
edition = "2021"

[features]
# Regular features
default = ["egui_terminal", "focus"]
egui_terminal = ["dep:bevy_egui", "dep:fyfth_terminal"]
focus = ["dep:fyfth_focus"]

# For the examples
example_features = [
    "default",
    "bevy_pan_orbit_camera",
    "bevy_panorbit_camera/bevy_egui",
]
bevy_pan_orbit_camera = ["dep:bevy_panorbit_camera"]
bevy_wayland = ["bevy/wayland"]

[dependencies]
bevy = { version = "0.14.2" }
bevy_egui = { version = "0.29.0", optional = true }
bevy_panorbit_camera = { version = "0.19.3", optional = true }
fyfth_core = { path = "crates/fyfth_core" }
fyfth_focus = { path = "crates/fyfth_focus", optional = true }
fyfth_terminal = { path = "crates/fyfth_terminal", optional = true }

[workspace]
resolver = "2"
members = ["crates/*"]

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
required-features = ["example_features"]

[package.metadata.example.basic_example]
name = "Basic Example"
description = "A basic example demonstrating the core functionality."
